# DubaiMatrixASI

./: .env  .gitignore  .openclaude-profile.json  README.md  SKILL.md  analyze.txt  analyze_errados.py  check_hftp_server.py  debug_swarm.py  diagnose_activity.py  github_sync.py  implementation_plan.md  main.py  main_mt5.py  requirements.txt  script.py  solenn_v1_inventory.json  solenn_v1_inventory.md  solenn_v1_to_v2_transmutation_report.md  summary.txt  task.md  task_elite_agents.md  task_evolution.md  task_hftp_bridge.md  task_hydra_engine.md  task_orchestrator.md  task_trinity_core.md  verify_all.py
PLMA/: 01_POM_Ontological_Map.md  02_ADL_Architectural_Decision_Log.md  03_CI_Capability_Inventory.md  04_LDG_Live_Dependency_Graph.md  05_DAC_Discarded_Approach_Cemetery.md  06_TDM_Technical_Debt_Map.md  07_CED_Conceptual_Evolution_Diary.md  08_PhD_Level_Consciousness.md  PLMA_CONSOLIDATED.txt  PLMA_TOTAL_CONSOLIDATED.txt
a0304285-d341-4d6e-ac49-163fc8146d42/: analysis_report_phase_10.md  analysis_report_phase_10.md.metadata.json  analysis_report_phase_10.md.resolved  analysis_report_phase_11.md  analysis_report_phase_11.md.metadata.json  analysis_report_phase_12.md  analysis_report_phase_12.md.metadata.json  analysis_report_phase_12.md.resolved.0  analysis_report_phase_13.md  analysis_report_phase_13.md.metadata.json  analysis_report_phase_13.md.resolved.0  analysis_report_phase_14.md  analysis_report_phase_14.md.metadata.json  analysis_report_phase_14.md.resolved  analysis_report_phase_4.md  analysis_report_phase_4.md.metadata.json  analysis_report_phase_4.md.resolved.0  analysis_report_phase_5.md  analysis_report_phase_5.md.metadata.json  analysis_report_phase_5.md.resolved.0  analysis_report_phase_6.md  analysis_report_phase_6.md.metadata.json  analysis_report_phase_6.md.resolved  analysis_report_phase_7.md  analysis_report_phase_7.md.metadata.json  analysis_report_phase_7.md.resolved  analysis_report_phase_8.md  analysis_report_phase_8.md.metadata.json  analysis_report_phase_8.md.resolved.0  analysis_report_phase_9.md  task.md  (+19 more)
cpp/: CMakeLists.txt  asi_bridge.py  build.bat
cpp/src/: agent_cluster.cpp  asi_core.h  braid_topology.cpp  causal_engine.cpp  chaos_detector.cpp  eigenvector_centrality.cpp  entropy_processor.cpp  holographic_matrix.cpp  hyperspace_core.cpp  info_geometry.cpp  information_causality.cpp  liquid_state_engine.cpp  liquidity_graph.cpp  mean_field_games.cpp  omega_extreme.cpp  omega_transcendence.cpp  orderflow_processor.cpp  phd_omega_math.cpp  pheromone_field.cpp  quantum_field_theory.cpp  quantum_indicators.cpp  rg_attractor_engine.cpp  risk_engine.cpp  signal_aggregator.cpp  spectral_geometry.cpp  spiking_neuron.cpp  tensor_networks.cpp  topology_core.cpp  vector_storage.cpp
(+4242 files in other folders)
